--- a/ifolder/src/FormsTrayApp/AcceptInvitation.fr.resx
+++ b/ifolder/src/FormsTrayApp/AcceptInvitation.fr.resx
@@ -791,7 +791,7 @@
 	</data>
   
 	<data name="label2.Text">
-		<value>Emplacement</value>
+		<value>&amp;Emplacement :</value>
 	</data>
   
 	<data name="label2.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -995,7 +995,7 @@
 	</data>
   
 	<data name="label3.Text">
-		<value>Choose a location on this computer for the iFolder.</value>
+		<value>Choisissez un emplacement sur cet ordinateur pour le dossier iFolder.</value>
 	</data>
   
 	<data name="label3.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1159,15 +1159,15 @@
 	</data>
   
 	<data name="pathValidationError">
-		<value>An exception occurred while validating the path.</value>
+		<value>Une exception est survenue lors de la validation du chemin.</value>
 	</data>
   
 	<data name="pathValidationErrorTitle">
-		<value>Unable to Validate Path</value>
+		<value>Impossible de valider le chemin</value>
 	</data>
   
 	<data name="pathIniFolderError">
-		<value>The selected location is inside another iFolder.  iFolders cannot exist inside other iFolders.  Please select a different location and try again.</value>
+		<value>L'emplacement sélectionné se trouve dans un autre dossier iFolder. Les dossiers iFolder ne peuvent pas contenir d'autres dossiers iFolder. Sélectionnez un autre emplacement et réessayez.</value>
 	</data>
   
 	<data name="pathInvalidErrorTitle">
@@ -1175,43 +1175,43 @@
 	</data>
   
 	<data name="pathExistsError">
-		<value>The location you selected already contains a folder with the same name as this iFolder.  Please select a different location and try again.</value>
+		<value>L'emplacement que vous avez sélectionné contient déjà un dossier qui porte le même nom que celui de ce dossier iFolder. Sélectionnez un autre emplacement et réessayez.</value>
 	</data>
   
 	<data name="pathInStoreError">
-		<value>The selected location is inside the iFolder data folder.  Please select a different location and try again.</value>
+		<value>L'emplacement sélectionné se trouve dans le dossier de données iFolder. Sélectionnez un autre emplacement et réessayez.</value>
 	</data>
   
 	<data name="pathIncludesWinDirError">
-		<value>The selected location includes the Windows folder.  The Windows folder cannot contain an iFolder.  Please select a different location and try again.</value>
+		<value>L'emplacement sélectionné comprend le dossier Windows. Ce dernier ne peut pas contenir de dossier iFolder. Sélectionnez un autre emplacement et réessayez.</value>
 	</data>
   
 	<data name="pathIncludesProgFilesDirError">
-		<value>The selected location includes the Program Files folder.  The Program Files folder cannot contain an iFolder.  Please select a different location and try again.</value>
+		<value>L'emplacement sélectionné comprend le dossier Program Files. Ce dernier ne peut pas contenir de dossier iFolder. Sélectionnez un autre emplacement et réessayez.</value>
 	</data>
   
 	<data name="acceptError">
-		<value>An exception occurred while setting up the iFolder.</value>
+		<value>Une exception est survenue lors de la configuration de iFolder.</value>
 	</data>
   
 	<data name="networkPath">
-		<value>The selected location is on a network or non-physical drive.  iFolders must reside on a physical drive.  Please select a different location and try again.</value>
+		<value>L'emplacement sélectionné se trouve sur un réseau ou sur une unité non physique. Les dossiers iFolder doivent résider sur une unité physique. Sélectionnez un autre emplacement et réessayez.</value>
 	</data>
   
 	<data name="selectLocation">
-		<value>Select a location for the iFolder.</value>
+		<value>Sélectionnez un emplacement pour le dossier iFolder.</value>
 	</data>
   
 	<data name="iFolderName">
-		<value>Nom</value>
+		<value>Nom : {0}</value>
 	</data>
   
 	<data name="sharedBy">
-		<value>Shared by: {0}</value>
+		<value>Partagé par : {0}</value>
 	</data>
   
 	<data name="rights">
-		<value>   accès            %+5m0  %+4m1.%k2\n</value>
+		<value>Accès : {0}</value>
 	</data>
   
 	<data name="Deny">
@@ -1219,11 +1219,11 @@
 	</data>
   
 	<data name="createDirectoryError">
-		<value>Impossible de créer le répertoir</value>
+		<value>Impossible de créer le répertoire.</value>
 	</data>
   
 	<data name="createDirectoryMessage">
-		<value>The directory specified does not exist.  Do you want to create the directory?</value>
+		<value>Le répertoire spécifié n'existe pas. Voulez-vous le créer ?</value>
 	</data>
   
 	<data name="createDirectoryTitle">
@@ -1231,6 +1231,6 @@
 	</data>
   
 	<data name="accessDenied">
-		<value>You do not have sufficient access to the selected location.  iFolders can only be created in folders where you have access to read and write files.  Please select a different location and try again.</value>
+		<value>Vous ne disposez pas de droits d'accès suffisants sur l'emplacement sélectionné. Les dossiers iFolder ne peuvent être créés que dans des dossiers dans lesquels vous avez accès aux fichiers en lecture et en écriture.</value>
 	</data>
 </root>
