--- a/ifolder/src/FormsTrayApp/GlobalProperties.fr.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.fr.resx
@@ -515,7 +515,7 @@
 	</data>
   
 	<data name="menuCreate.Text">
-		<value>Nouveau</value>
+		<value>&amp;Nouveau...</value>
 	</data>
   
 	<data name="menuCreate.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -571,7 +571,7 @@
 	</data>
   
 	<data name="menuAccept.Text">
-		<value>Configurer</value>
+		<value>Config&amp;urer...</value>
 	</data>
   
 	<data name="menuAccept.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -683,7 +683,7 @@
 	</data>
   
 	<data name="menuSyncNow.Text">
-		<value>Synchroniser maintenant</value>
+		<value>S&amp;ynchroniser maintenant</value>
 	</data>
   
 	<data name="menuSyncNow.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -711,7 +711,7 @@
 	</data>
   
 	<data name="menuRevert.Text">
-		<value>Revenir à un dossier normal</value>
+		<value>Re&amp;venir à un dossier normal</value>
 	</data>
   
 	<data name="menuRevert.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -867,7 +867,7 @@
 	</data>
   
 	<data name="menuActionCreate.Text">
-		<value>Nouveau</value>
+		<value>&amp;Nouveau...</value>
 	</data>
   
 	<data name="menuActionCreate.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -923,7 +923,7 @@
 	</data>
   
 	<data name="menuActionAccept.Text">
-		<value>Configurer</value>
+		<value>Config&amp;urer...</value>
 	</data>
   
 	<data name="menuActionAccept.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1091,7 +1091,7 @@
 	</data>
   
 	<data name="menuActionSync.Text">
-		<value>Synchroniser maintenant</value>
+		<value>S&amp;ynchroniser maintenant</value>
 	</data>
   
 	<data name="menuActionSync.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1119,7 +1119,7 @@
 	</data>
   
 	<data name="menuActionRevert.Text">
-		<value>Revenir à un dossier normal</value>
+		<value>Re&amp;venir à un dossier normal</value>
 	</data>
   
 	<data name="menuActionRevert.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1591,7 +1591,7 @@
 	</data>
   
 	<data name="toolBarSetup.ToolTipText">
-		<value>Set up the selected iFolder</value>
+		<value>Configurer le dossier iFolder sélectionné</value>
 	</data>
   
 	<data name="toolBarSetup.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1619,7 +1619,7 @@
 	</data>
   
 	<data name="toolBarShare.ToolTipText">
-		<value>Share the selected iFolder</value>
+		<value>Partager le dossier iFolder sélectionné</value>
 	</data>
   
 	<data name="toolBarShare.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1647,7 +1647,7 @@
 	</data>
   
 	<data name="toolBarResolve.ToolTipText">
-		<value>Resolve conflicts in the selected iFolder</value>
+		<value>Résoudre les conflits dans le dossier iFolder sélectionné</value>
 	</data>
   
 	<data name="toolBarResolve.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1675,7 +1675,7 @@
 	</data>
   
 	<data name="toolBarSync.ToolTipText">
-		<value>Synchronize the selected iFolder</value>
+		<value>Synchroniser le dossier iFolder sélectionné</value>
 	</data>
   
 	<data name="toolBarSync.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2419,7 +2419,7 @@
 	</data>
   
 	<data name="statusConflicts">
-		<value>Has conflicts</value>
+		<value>Conflits</value>
 	</data>
   
 	<data name="statusOK">
@@ -2427,7 +2427,7 @@
 	</data>
   
 	<data name="Available">
-		<value>Not set up</value>
+		<value>Non configuré</value>
 	</data>
   
 	<data name="WaitConnect">
@@ -2435,7 +2435,7 @@
 	</data>
   
 	<data name="WaitSync">
-		<value>Waiting to synchronize</value>
+		<value>En attente de synchronisation</value>
 	</data>
   
 	<data name="statusUnknown">
@@ -2443,35 +2443,35 @@
 	</data>
   
 	<data name="iFolderError">
-		<value>An error was encountered while reading the iFolders.</value>
+		<value>Erreur durant la lecture des dossiers iFolder.</value>
 	</data>
   
 	<data name="iFolderErrorTitle">
-		<value>Unable to Read iFolders</value>
+		<value>Impossible de lire les dossiers iFolder</value>
 	</data>
   
 	<data name="syncError">
-		<value>An error was encountered while synchronizing the iFolder.</value>
+		<value>Erreur de synchronisation du dossier iFolder.</value>
 	</data>
   
 	<data name="syncErrorTitle">
-		<value>iFolder Synchronization Error</value>
+		<value>Erreur de synchronisation du dossier iFolder</value>
 	</data>
   
 	<data name="iFolderOpenError">
-		<value>Unable to open iFolder {0}.</value>
+		<value>Impossible d'ouvrir le dossier iFolder {0}.</value>
 	</data>
   
 	<data name="openErrorTitle">
-		<value>iFolder Open Error</value>
+		<value>Erreur d'ouverture du dossier iFolder</value>
 	</data>
   
 	<data name="iFolderRevertError">
-		<value>An error was encountered while reverting the iFolder.</value>
+		<value>Erreur de reconversion du dossier iFolder.</value>
 	</data>
   
 	<data name="revertErrorTitle">
-		<value>iFolder Revert Error</value>
+		<value>Erreur de reconversion de dossier iFolder</value>
 	</data>
   
 	<data name="logEntriesCleared">
@@ -2479,31 +2479,31 @@
 	</data>
   
 	<data name="checkingForiFolders">
-		<value>Checking for new iFolders...</value>
+		<value>Recherche des nouveaux dossiers iFolder...</value>
 	</data>
   
 	<data name="doneCheckingForiFolders">
-		<value>Done checking for new iFolders</value>
+		<value>Recherche des nouveaux dossiers iFolder terminée</value>
 	</data>
   
 	<data name="localSync">
-		<value>Checking for changes: {0}</value>
+		<value>Recherche des changements : {0}</value>
 	</data>
   
 	<data name="preSync">
-		<value>Checking for changes</value>
+		<value>Recherche des changements</value>
 	</data>
   
 	<data name="disconnected">
-		<value>Server unavailable</value>
+		<value>Serveur indisponible</value>
 	</data>
   
 	<data name="synciFolder">
-		<value>Started synchronization: {0}</value>
+		<value>Synchronisation lancée : {0}</value>
 	</data>
   
 	<data name="syncComplete">
-		<value>Finished synchronization: {0}</value>
+		<value>Synchronisation terminée : {0}</value>
 	</data>
   
 	<data name="uploadFile">
@@ -2515,27 +2515,27 @@
 	</data>
   
 	<data name="localFile">
-		<value>Found changes in file: {0}</value>
+		<value>Changements trouvés dans le fichier  : {0}</value>
 	</data>
   
 	<data name="syncingFile">
-		<value>Synchronizing file: {0}</value>
+		<value>Synchronisation du fichier : {0}</value>
 	</data>
   
 	<data name="uploadDir">
-		<value>Uploading directory: {0}</value>
+		<value>Téléchargement du répertoire : {0}</value>
 	</data>
   
 	<data name="downloadDir">
-		<value>Downloading directory: {0}</value>
+		<value>Téléchargement du répertoire : {0}</value>
 	</data>
   
 	<data name="localDir">
-		<value>Found changes in directory: {0}</value>
+		<value>Changements trouvés dans le répertoire : {0}</value>
 	</data>
   
 	<data name="syncingDir">
-		<value>Synchronizing directory: {0}</value>
+		<value>Synchronisation du répertoire : {0}</value>
 	</data>
   
 	<data name="deleteClientFile">
@@ -2547,11 +2547,11 @@
 	</data>
   
 	<data name="deleteUnknown">
-		<value>Deleting on server: {0}</value>
+		<value>Suppression sur le serveur : {0}</value>
 	</data>
   
 	<data name="declineError">
-		<value>An error was encountered while removing the iFolder.</value>
+		<value>Erreur de suppression du dossier iFolder.</value>
 	</data>
   
 	<data name="errorTitle">
@@ -2559,19 +2559,19 @@
 	</data>
   
 	<data name="statusSyncing">
-		<value>Synchronizing</value>
+		<value>Synchronisation</value>
 	</data>
   
 	<data name="statusSyncFailure">
-		<value>Incomplete synchronization</value>
+		<value>Synchronisation incomplète</value>
 	</data>
   
 	<data name="statusSyncingItems">
-		<value>{0} items to synchronize</value>
+		<value>{0} éléments à synchroniser</value>
 	</data>
   
 	<data name="statusSyncItemsFailed">
-		<value>{0} items not synchronized</value>
+		<value>{0} éléments non synchronisés</value>
 	</data>
   
 	<data name="deleteAction">
@@ -2579,11 +2579,11 @@
 	</data>
   
 	<data name="revertTitle">
-		<value>Revert iFolder</value>
+		<value>Reconvertir le dossier iFolder</value>
 	</data>
   
 	<data name="revertPrompt">
-		<value>Are you sure you want to revert the iFolder to a normal folder?</value>
+		<value>Voulez-vous vraiment rétablir le dossier iFolder à l'état de dossier normal ?</value>
 	</data>
   
 	<data name="removeTitle">
@@ -2591,23 +2591,23 @@
 	</data>
   
 	<data name="removePrompt">
-		<value>Are you sure you want to remove the iFolder?</value>
+		<value>Voulez-vous vraiment supprimer le dossier iFolder ?</value>
 	</data>
   
 	<data name="removeiFolder">
-		<value>This removes you as a member of the iFolder.  You cannot access the iFolder unless the owner re-invites you.  The files are not deleted from your local hard drive.</value>
+		<value>Cette opération vous supprime en tant que membre du dossier iFolder. Vous ne pouvez pas accéder au dossier iFolder à moins que le propriétaire ne vous réinvite. Les fichiers ne sont pas supprimés de votre disque dur local.</value>
 	</data>
   
 	<data name="deleteiFolder">
-		<value>This removes the iFolder from your local computer.  Because you are the owner, the iFolder is removed from the server and all member computers.  The iFolder cannot be recovered or re-shared on another computer.  The files are not deleted from your local hard drive.</value>
+		<value>Cette opération supprime le dossier iFolder de votre ordinateur local. Comme vous en êtes le propriétaire, ce dossier est supprimé de tous les ordinateurs membres. Il ne peut être ni récupéré ni de nouveau partagé sur un autre ordinateur. Les fichiers ne sont pas supprimés de votre disque dur local.</value>
 	</data>
   
 	<data name="removeiFolder2">
-		<value>If you are the iFolder owner, this unshares the iFolder, reverts all copies of the iFolder to normal folders, and deletes the iFolder from the server. If you are a member, this removes you as a member, and you cannot access the original iFolder from any computer unless the owner re-invites you. Local copies of the iFolder contents are not deleted from computers where the iFolder is currently set up.</value>
+		<value>Si vous êtes propriétaire du dossier iFolder, cette opération en arrête le partage, rétablit toutes ses copies à l'état de dossier normal et supprime le dossier du serveur. Si vous êtes membre du dossier iFolder, vous ne pouvez pas accéder au dossier iFolder d'origine à partir d'un ordinateur à moins que le propriétaire ne vous réinvite. Le contenu des copies locales du dossier iFolder n'est pas supprimé des ordinateurs sur lesquels celui-ci est actuellement configuré.</value>
 	</data>
   
 	<data name="revertiFolder">
-		<value>This reverts the iFolder back to a normal folder and leaves the files intact.  The iFolder is then available from the server and must be set up in a different location to synchronize.</value>
+		<value>Cette opération rétablit le dossier iFolder à l’état de dossier normal et laisse les fichiers intacts. Le dossier iFolder est ensuite disponible à partir du serveur et doit être configuré à un autre emplacement pour la synchronisation.</value>
 	</data>
   
 	<data name="showAll">
