--- a/ifolder/src/FormsTrayApp/RemoveAccount.fr.resx
+++ b/ifolder/src/FormsTrayApp/RemoveAccount.fr.resx
@@ -263,7 +263,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>Remove iFolder Account?</value>
+		<value>Supprimer le compte iFolder ?</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -975,7 +975,7 @@
 	</data>
   
 	<data name="removeAll.Text">
-		<value>&amp;Remove my iFolders and files from the server</value>
+		<value>&amp;Supprimer les dossiers et fichiers iFolder du serveur</value>
 	</data>
   
 	<data name="removeAll.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1319,7 +1319,7 @@
 	</data>
   
 	<data name="$this.Text">
-		<value>Remove Account</value>
+		<value>Supprimer le compte</value>
 	</data>
   
 	<data name="&gt;&gt;$this.Name">
@@ -1331,11 +1331,11 @@
 	</data>
   
 	<data name="removeAccount1">
-		<value>Removing iFolder from the server will delete the files stored on the server.  Your files will remain intact on this computer.</value>
+		<value>La suppression du iFolder du serveur aura pour effet de supprimer les fichiers stockés sur le serveur. Vos fichiers resteront intacts sur cet ordinateur.</value>
 	</data>
   
 	<data name="removeAccount2">
-		<value>If you've shared any iFolders with other users, they will no longer be able to synchronize them with the server.  Additionally, you will no longer be able to access these iFolders from any other computer.</value>
+		<value>Si vous avez partagé des dossiers iFolder avec d'autres utilisateurs, ils ne pourront plus les synchroniser avec le serveur. En outre, vous ne pourrez plus accéder à ces dossiers iFolder depuis aucun autre ordinateur.</value>
 	</data>
   
 	<data name="warning">
