--- a/ifolder/src/iFolderShell/NewiFolder.zh-CN.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.zh-CN.resx
@@ -119,7 +119,7 @@
 	</data>
   
 	<data name="close.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-		<value>Top, Left</value>
+		<value>Bottom, Right</value>
 	</data>
   
 	<data name="close.BackgroundImage" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -159,7 +159,7 @@
 	</data>
   
 	<data name="close.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-		<value>369, 85</value>
+		<value>369, 93</value>
 	</data>
   
 	<data name="close.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -315,7 +315,7 @@
 	</data>
   
 	<data name="dontAsk.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-		<value>Top, Left</value>
+		<value>Bottom, Left</value>
 	</data>
   
 	<data name="dontAsk.Appearance" type="System.Windows.Forms.Appearance, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -363,7 +363,7 @@
 	</data>
   
 	<data name="dontAsk.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-		<value>16, 88</value>
+		<value>16, 96</value>
 	</data>
   
 	<data name="dontAsk.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -427,7 +427,7 @@
 	</data>
   
 	<data name="iFolderOverview.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-		<value>Top, Left</value>
+		<value>Top, Bottom, Left, Right</value>
 	</data>
   
 	<data name="iFolderOverview.AutoSize" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -475,7 +475,7 @@
 	</data>
   
 	<data name="iFolderOverview.Size" type="System.Drawing.Size, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-		<value>376, 56</value>
+		<value>376, 64</value>
 	</data>
   
 	<data name="iFolderOverview.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -514,10 +514,6 @@
 		<value>False</value>
 	</data>
   
-	<data name="$this.Name">
-		<value>新建 iFolder</value>
-	</data>
-  
 	<data name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
 		<value>(Default)</value>
 	</data>
@@ -532,6 +528,10 @@
   
 	<data name="$this.GridSize" type="System.Drawing.Size, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
 		<value>8, 8</value>
+	</data>
+  
+	<data name="$this.Name">
+		<value>新建 iFolder</value>
 	</data>
   
 	<data name="$this.DrawGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -579,7 +579,7 @@
 	</data>
   
 	<data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-		<value>456, 120</value>
+		<value>456, 128</value>
 	</data>
   
 	<data name="$this.Enabled" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
