--- a/ifolder/src/iFolderShell/Picker.fr.resx
+++ b/ifolder/src/iFolderShell/Picker.fr.resx
@@ -287,7 +287,7 @@
 	</data>
   
 	<data name="add.Text">
-		<value>Ajouter</value>
+		<value>&amp;Ajouter&gt;&gt;</value>
 	</data>
   
 	<data name="add.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1131,7 +1131,7 @@
 	</data>
   
 	<data name="label2.Text">
-		<value>(Full or partial &amp;name)</value>
+		<value>(&amp;Nom complet ou partiel)</value>
 	</data>
   
 	<data name="label2.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1291,7 +1291,7 @@
 	</data>
   
 	<data name="$this.Name">
-		<value>Picker</value>
+		<value>Sélecteur</value>
 	</data>
   
 	<data name="$this.DrawGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1415,14 +1415,14 @@
 	</data>
   
 	<data name="memberReadError">
-		<value>An error was encountered while reading the member list.</value>
+		<value>Erreur de lecture de la liste des membres.</value>
 	</data>
   
 	<data name="rosterNotSynced">
-		<value>The user list has not finished synchronizing from the server.  Please try again later.</value>
+		<value>Synchronisation de la liste des utilisateurs à partir du serveur non terminée. Réessayez ultérieurement.</value>
 	</data>
   
 	<data name="searchPrompt">
-		<value>&lt;Enter text to find a user&gt;</value>
+		<value>&lt;Entrez un texte pour rechercher un utilisateur&gt;</value>
 	</data>
 </root>
