--- a/ifolder/src/iFolderShell/iFolderAdvanced.fr.resx
+++ b/ifolder/src/iFolderShell/iFolderAdvanced.fr.resx
@@ -539,7 +539,7 @@
 	</data>
   
 	<data name="syncNow.HelpString">
-		<value>Click to cause this iFolder to synchronize at the next available time.</value>
+		<value>Cliquez pour que ce dossier iFolder soit synchronisé la prochaine fois.</value>
 	</data>
   
 	<data name="syncNow.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -659,7 +659,7 @@
 	</data>
   
 	<data name="lastSync.HelpString">
-		<value>Displays the last time that this iFolder successfully synchronized files to/from the server.</value>
+		<value>Affiche à quel moment ce dossier iFolder a synchronisé avec succès les fichiers sur et depuis le serveur.</value>
 	</data>
   
 	<data name="lastSync.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -895,7 +895,7 @@
 	</data>
   
 	<data name="syncInterval.HelpString">
-		<value>Specifies the interval at which this iFolder will synchronize.</value>
+		<value>Indique l'intervalle de synchronisation de ce dossier iFolder.</value>
 	</data>
   
 	<data name="syncInterval.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1139,7 +1139,7 @@
 	</data>
   
 	<data name="autoSync.HelpString">
-		<value>Check to set the interval at which this iFolder will synchronize.  If this box is unchecked, the iFolder will never synchronize.</value>
+		<value>Cochez la case pour définir l'intervalle de synchronisation de ce dossier iFolder. Si cette case n'est pas cochée, le dossier iFolder ne sera jamais synchronisé.</value>
 	</data>
   
 	<data name="autoSync.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1179,7 +1179,7 @@
 	</data>
   
 	<data name="autoSync.Text">
-		<value>Automatically &amp;Synchronizes Every:</value>
+		<value>&amp;Synchronisation automatique tous les :</value>
 	</data>
   
 	<data name="autoSync.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1259,7 +1259,7 @@
 	</data>
   
 	<data name="objectCount.HelpString">
-		<value>Displays the number of files and/or folders in this iFolder that need to be synchronized.</value>
+		<value>Affiche le nombre de fichiers et/ou de dossiers de ce dossier iFolder qui doivent être synchronisés.</value>
 	</data>
   
 	<data name="objectCount.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1539,7 +1539,7 @@
 	</data>
   
 	<data name="groupBox3.Text">
-		<value>Disk Space on Server</value>
+		<value>Espace disque du serveur</value>
 	</data>
   
 	<data name="groupBox3.ToolTip">
@@ -1627,7 +1627,7 @@
 	</data>
   
 	<data name="gaugeChart.HelpString">
-		<value>Displays the amount of space used.</value>
+		<value>Affiche l'espace utilisé.</value>
 	</data>
   
 	<data name="gaugeChart.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1851,7 +1851,7 @@
 	</data>
   
 	<data name="limitEdit.HelpString">
-		<value>Displays the size limit of this iFolder.</value>
+		<value>Affiche la taille limite pour ce dossier iFolder.</value>
 	</data>
   
 	<data name="limitEdit.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1991,7 +1991,7 @@
 	</data>
   
 	<data name="setLimit.HelpString">
-		<value>Check to set a size limit on this iFolder.</value>
+		<value>Cochez la case pour définir une taille limite sur ce dossier iFolder.</value>
 	</data>
   
 	<data name="setLimit.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2031,7 +2031,7 @@
 	</data>
   
 	<data name="setLimit.Text">
-		<value>Set &amp;Quota:</value>
+		<value>Définir un &amp;quota :</value>
 	</data>
   
 	<data name="setLimit.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2471,7 +2471,7 @@
 	</data>
   
 	<data name="available.HelpString">
-		<value>Displays the amount of space available in this iFolder.</value>
+		<value>Affiche l'espace disponible dans ce dossier iFolder.</value>
 	</data>
   
 	<data name="available.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2831,7 +2831,7 @@
 	</data>
   
 	<data name="used.HelpString">
-		<value>Displays the size of this iFolder.</value>
+		<value>Affiche la taille de ce dossier iFolder.</value>
 	</data>
   
 	<data name="used.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -3191,7 +3191,7 @@
 	</data>
   
 	<data name="limit.HelpString">
-		<value>Displays the size limit of this iFolder.</value>
+		<value>Affiche la taille limite de ce dossier iFolder.</value>
 	</data>
   
 	<data name="limit.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -3451,7 +3451,7 @@
 	</data>
   
 	<data name="access.HelpString">
-		<value>Click to set the selected user(s) access rights to this iFolder.</value>
+		<value>Cliquez pour définir les droits d'accès du ou des utilisateurs sélectionnés sur ce dossier iFolder.</value>
 	</data>
   
 	<data name="access.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -3575,7 +3575,7 @@
 	</data>
   
 	<data name="add.HelpString">
-		<value>Click to add users to share this iFolder with.</value>
+		<value>Cliquez pour ajouter les utilisateurs avec qui partager ce dossier iFolder.</value>
 	</data>
   
 	<data name="add.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -3699,7 +3699,7 @@
 	</data>
   
 	<data name="remove.HelpString">
-		<value>Click to stop sharing this iFolder with the selected user(s).</value>
+		<value>Cliquez pour arrêter de partager ce dossier iFolder avec le ou les utilisateurs sélectionnés</value>
 	</data>
   
 	<data name="remove.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -3823,7 +3823,7 @@
 	</data>
   
 	<data name="shareWith.HelpString">
-		<value>Lists the users that this iFolder is currently being shared with.</value>
+		<value>Répertorie les utilisateurs avec qui ce dossier iFolder est actuellement partagé.</value>
 	</data>
   
 	<data name="shareWith.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -4091,7 +4091,7 @@
 	</data>
   
 	<data name="conflicts.HelpString">
-		<value>Click to resolve conflicts in this iFolder.</value>
+		<value>Cliquez pour résoudre les conflits de ce dossier iFolder.</value>
 	</data>
   
 	<data name="conflicts.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -4711,7 +4711,7 @@
 	</data>
   
 	<data name="ifolders.HelpString">
-		<value>The list of iFolders on this computer.</value>
+		<value>Liste des dossiers iFolder de cet ordinateur.</value>
 	</data>
   
 	<data name="ifolders.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -4955,7 +4955,7 @@
 	</data>
   
 	<data name="open.HelpString">
-		<value>Click to open this iFolder in Explorer.</value>
+		<value>Cliquez pour ouvrir ce dossier iFolder dans Explorer.</value>
 	</data>
   
 	<data name="open.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -5375,7 +5375,7 @@
 	</data>
   
 	<data name="diskQuotaReadError">
-		<value>An error was encountered while reading disk space restrictions.</value>
+		<value>Une erreur est survenue lors de la lecture des restrictions d'espace disque.</value>
 	</data>
   
 	<data name="errorTitle">
@@ -5383,7 +5383,7 @@
 	</data>
   
 	<data name="memberReadError">
-		<value>An error was encountered while reading iFolder members.</value>
+		<value>Une erreur est survenue lors de la lecture des membres iFolder.</value>
 	</data>
   
 	<data name="Admin">
@@ -5407,7 +5407,7 @@
 	</data>
   
 	<data name="Invited">
-		<value>Invited</value>
+		<value>Invité</value>
 	</data>
   
 	<data name="WaitSync">
@@ -5415,7 +5415,7 @@
 	</data>
   
 	<data name="AccessRequest">
-		<value>Access requested</value>
+		<value>Accès demandé</value>
 	</data>
   
 	<data name="Declined">
@@ -5423,7 +5423,7 @@
 	</data>
   
 	<data name="Inviting">
-		<value>Ready to invite</value>
+		<value>Prêt à inviter</value>
 	</data>
   
 	<data name="owner">
@@ -5435,31 +5435,31 @@
 	</data>
   
 	<data name="saveErrorTitle">
-		<value>iFolder Save Error</value>
+		<value>Erreur d'enregistrement iFolder</value>
 	</data>
   
 	<data name="changeOwnerError">
-		<value>An error was encountered while saving the new owner of the iFolder.</value>
+		<value>Une erreur est survenue lors de l'enregistrement du nouveau propriétaire du dossier iFolder.</value>
 	</data>
   
 	<data name="memberCommitError">
-		<value>An error was encountered while saving changes for {0}.</value>
+		<value>Une erreur est survenue lors de l'enregistrement des changements pour {0}.</value>
 	</data>
   
 	<data name="removeError">
-		<value>Remove failed with the following exception:</value>
+		<value>La suppression a échoué avec l'exception suivante :</value>
 	</data>
   
 	<data name="policyCommitError">
-		<value>An error was encountered while saving policy changes.</value>
+		<value>Une erreur est survenue lors de l'enregistrement des changements de la règle.</value>
 	</data>
   
 	<data name="iFolderReadError">
-		<value>An error was encountered reading iFolder data.</value>
+		<value>Une erreur est survenue lors de la lecture des données du dossier iFolder.</value>
 	</data>
   
 	<data name="saveChanges">
-		<value>Do you want to save the changes you have made to the iFolder?</value>
+		<value>Voulez-vous enregistrer les changements effectués dans le dossier iFolder ?</value>
 	</data>
   
 	<data name="saveChangesTitle">
@@ -5471,43 +5471,43 @@
 	</data>
   
 	<data name="iFolderOpenError">
-		<value>Unable to open iFolder {0}.</value>
+		<value>Impossible d'ouvrir le dossier iFolder {0}.</value>
 	</data>
   
 	<data name="userProperties">
-		<value>Access for {0}</value>
+		<value>Accès à {0}</value>
 	</data>
   
 	<data name="helpErrorTitle">
-		<value>iFolder Help Error</value>
+		<value>Erreur de l'aide iFolder</value>
 	</data>
   
 	<data name="helpFileError">
-		<value>An error was encountered while opening the help file.</value>
+		<value>Une erreur est survenue lors de l'ouverture du fichier d'aide.</value>
 	</data>
   
 	<data name="conflictErrorTitle">
-		<value>iFolder Conflict Error</value>
+		<value>Erreur de conflit iFolder</value>
 	</data>
   
 	<data name="conflictDialogError">
-		<value>An error was encountered while displaying the Conflict Resolver dialog.</value>
+		<value>Une erreur est survenue lors de l'affichage de la boîte de dialogue de résolution des conflits.</value>
 	</data>
   
 	<data name="propertiesErrorTitle">
-		<value>iFolder Properties Error</value>
+		<value>Erreur des propriétés iFolder</value>
 	</data>
   
 	<data name="propertiesDialogError">
-		<value>An error was encountered while displaying the iFolder properties dialog.</value>
+		<value>Une erreur est survenue lors de l'affichage de la boîte de dialogue des propriétés iFolder.</value>
 	</data>
   
 	<data name="syncError">
-		<value>An error was encountered while sending the sync command.</value>
+		<value>Une erreur est survenue lors de l'envoi de la commande sync.</value>
 	</data>
   
 	<data name="slaveSyncInterval">
-		<value>Automatically Synchronizes Every: {0} {1}</value>
+		<value>Synchronisation automatique tous les : {0} {1}</value>
 	</data>
   
 	<data name="seconds">
